--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.1"
+    "react-native": "0.73.1",
+    "react-native-gesture-handler": "^2.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
